--- a/public/stylesheets/single/single.css
+++ b/public/stylesheets/single/single.css
@@ -157,9 +157,18 @@ body {
 	padding-top: 0.5rem;
 	margin-top: -0.5rem;
 }
-.like-icon {
+.like-collect {
 	float: right;
 	margin-top: 0.1rem;
+	height: 0.22rem;
+	color: #76B3B4;
+}
+.like-icon {
+	display: inline-block;	
 	width: 0.22rem;
 	height: 0.22rem;
+}
+.like-count {
+	text-align: top;
+	font-size: 0.12rem;
 }
