--- a/public/stylesheets/list/list.css
+++ b/public/stylesheets/list/list.css
@@ -46,6 +46,10 @@ html {
 	text-align: center;
 	background: #76B3B4;
 }
+.login-img.logged{
+	font-size: 0.24rem;
+	margin-top: 0.1rem;
+}
 
 .content {
 	padding-top: 0.55rem;
