--- a/public/stylesheets/list/list.css
+++ b/public/stylesheets/list/list.css
@@ -42,6 +42,7 @@ html {
 	float: right;
 	width: 0.5rem;
 	height: 0.5rem;
+	line-height: 0.5rem;
 	font-size: 0.3rem;
 	text-align: center;
 	background: #76B3B4;
