--- a/public/stylesheets/single/single.css
+++ b/public/stylesheets/single/single.css
@@ -49,6 +49,9 @@ body {
 	text-align: center;
 	background: #76B3B4;
 }
+.header .login-img.logged{
+	font-size: 0.24rem;
+}
 .goBack {
 	margin-left: 0.1rem;
 	font-size: 0.26rem;
@@ -159,16 +162,33 @@ body {
 }
 .like-collect {
 	float: right;
-	margin-top: 0.1rem;
 	height: 0.22rem;
 	color: #76B3B4;
 }
 .like-icon {
 	display: inline-block;	
-	width: 0.22rem;
-	height: 0.22rem;
+	width: 0.2rem;
+	height: 0.2rem;
 }
-.like-count {
+.icon-count {
 	text-align: top;
 	font-size: 0.12rem;
+}
+.watch-icon {
+	display: inline-block;
+	margin-top: 0.02rem;
+	width: 0.2rem;
+	height: 0.2rem;
+	line-height: 0.2rem;
+	font-size: 0.21rem;
+
+}
+.collect-icon {
+	display: inline-block;
+	margin-top: -0.01rem;
+	width: 0.2rem;
+	height: 0.2rem;
+	line-height: 0.2rem;
+	font-size: 0.21rem;
+
 }
