--- a/views/login/myInfo.ejs
+++ b/views/login/myInfo.ejs
@@ -7,13 +7,13 @@
         <div class="content">
             <p class="nickname"><span>Hi</span>&nbsp;<%= data.nickname %></p>
             <hr class="seperator">
-            <p class="my-option unavailable"><i class="iconfont option-icon">&#xe610;</i>收藏的家(未上线)</p>            
+            <p class="my-option"><a href="javascript:void(0);" class="my-collect"><i class="iconfont option-icon">&#xe610;</i>收藏的家(<%=data.collect.length%>)</a></p>            
             <hr class="seperator">
             <p class="my-option unavailable"><i class="iconfont option-icon">&#xe641;</i>收藏的物品(未上线)</p>
             <hr class="seperator">
             <p class="my-option unavailable"><i class="iconfont option-icon">&#xe607;</i>消息(未上线)</p>
             <hr class="seperator">
-            <a href="javascript:void(0);" class="logout">退出&nbsp;<i class="iconfont">&#xe62c;</i></a>
+            <a href="javascript:void(0);" class="logout">注销&nbsp;<i class="iconfont">&#xe62c;</i></a>
         </div>
 
         
