--- a/public/stylesheets/iconfont/iconfont.css
+++ b/public/stylesheets/iconfont/iconfont.css
@@ -1,10 +1,10 @@
 
 @font-face {font-family: "iconfont";
-  src: url('iconfont.eot?t=1481554259072'); /* IE9*/
-  src: url('iconfont.eot?t=1481554259072#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('iconfont.woff?t=1481554259072') format('woff'), /* chrome, firefox */
-  url('iconfont.ttf?t=1481554259072') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('iconfont.svg?t=1481554259072#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('iconfont.eot?t=1481639464936'); /* IE9*/
+  src: url('iconfont.eot?t=1481639464936#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('iconfont.woff?t=1481639464936') format('woff'), /* chrome, firefox */
+  url('iconfont.ttf?t=1481639464936') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('iconfont.svg?t=1481639464936#iconfont') format('svg'); /* iOS 4.1- */
 }
 
 .iconfont {
@@ -12,7 +12,6 @@
   font-size:16px;
   font-style:normal;
   -webkit-font-smoothing: antialiased;
-  -webkit-text-stroke-width: 0.2px;
   -moz-osx-font-smoothing: grayscale;
 }
 
@@ -28,6 +27,8 @@
 
 .icon-icon3:before { content: "\e607"; }
 
+.icon-shoucang1:before { content: "\e608"; }
+
 .icon-mima:before { content: "\e633"; }
 
 .icon-pipinicheng:before { content: "\e67c"; }
@@ -36,15 +37,13 @@
 
 .icon-xyfanhui01:before { content: "\e61d"; }
 
-.icon-shoucang:before { content: "\e60c"; }
-
-.icon-shoucangshixin:before { content: "\e606"; }
-
 .icon-dianbo:before { content: "\e600"; }
 
 .icon-dengjuanzhuang:before { content: "\e641"; }
 
 .icon-5:before { content: "\e610"; }
+
+.icon-huijijiayuanshoucangicon01:before { content: "\e645"; }
 
 .icon-xihuan:before { content: "\e699"; }
 
@@ -63,4 +62,6 @@
 .icon-icon:before { content: "\e60f"; }
 
 .icon-menu:before { content: "\e605"; }
+
+.icon-liulan1:before { content: "\e7f7"; }
 
