--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -32,11 +32,9 @@
                             <p class="fy-item-name"><%=item.title%></p>
                             <p class="fy-item-detail"><i class="iconfont info-icon">&#xe602;</i><span><%=item.type%></span><i class="iconfont info-icon">&#xe682;</i><span>装修<%=item.dec_cost%>万</span><i class="iconfont info-icon">&#xe635;</i><span><%=item.province%> <%=item.county%></span></p>                           
                         </div>
-                        <% if (item.like) { %>
-                            <span class="like-icon do-like"></span>
-                        <% } else { %>
-                            <span class="like-icon donot-like"></span>
-                        <% } %>
+                        <div class="watch-area">
+                            <i class="iconfont watch-icon">&#xe7f7;</i><span class="icon-count"><%= item.watchs %></span>
+                        </div>
                     </div>  
                 </li>
             <% }) %>
