--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -57,8 +57,7 @@
                   <span class="like-icon donot-like" data-id=<%=data._id%>></span>
                 <% } %>
                 <span class="icon-count like-count"><%= data.likes %></span>
-                <i class="iconfont watch-icon">&#xe62e;</i>
-                <span class="icon-count"><%= data.watchs %></span>
+
               </div>
           </p>
 
@@ -101,67 +100,32 @@
               
             <h2 class="info__title anchor-point" id="comments">评论</h2>
             <hr class="seperator">
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
-            <p>asdf</p>
+            <div class="comment-input-area">
+              <textarea name="comment-input" id="comment-input" placeholder="你的看法..."></textarea>
+              <!-- <input type="text" name="comment-input" id="comment-input" placeholder="你的看法..."> -->
+            </div>
+            <div class="clearfix">
+              <button type="button" class="reply-btn">发送</button>
+            </div>
+            
+            <hr class="seperator comments-seperator" style="margin-right: 0">
+            <br><br>
+            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
+            <br><br>
+            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
+            <br><br>
+            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
+            <br><br>
+            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
+            <br><br>
+            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
+            <br><br>
+            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
+           
+
             <hr class="seperator">
-        </div>   
+        </div>
+
         <script type="text/javascript">
           var logStatus = <%=logStatus%>;
         </script>
