--- a/public/stylesheets/single/single.css
+++ b/public/stylesheets/single/single.css
@@ -192,3 +192,39 @@ body {
 	font-size: 0.21rem;
 
 }
+.comment-input-area {
+	width: 100%;
+	height: 0.76rem;
+	background: #fafafa;
+	text-align: center;
+}
+#comment-input {
+	border: none;
+	margin: 0.05rem;
+	width: 94%;
+	height: 0.61rem;
+	line-height: 0.3rem;
+	font-size: 0.14rem;
+	padding-left: 0.06rem;
+	color: #666;
+	border-radius: 0;
+}
+::-webkit-input-placeholder { /* WebKit browsers */ 
+color: #ccc; 
+} 
+.reply-btn {
+	float: right;
+	margin-top: 0.08rem;
+	text-decoration: none;
+	padding: 0.01rem 0.03rem;
+	height: 0.18rem;
+	line-height: 0.14rem;
+	font-size: 0.14rem; 
+	background: #dfdfdf;
+	color: #fff;
+	border: none;
+	border-radius: 0.02rem;
+}
+hr.comments-seperator {
+	margin-top: 0.2rem;
+}
