--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -108,22 +108,28 @@
               <button type="button" class="reply-btn">发送</button>
             </div>
             
-            <hr class="seperator comments-seperator" style="margin-right: 0">
-            <br><br>
-            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
-            <br><br>
-            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
-            <br><br>
-            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
-            <br><br>
-            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
-            <br><br>
-            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
-            <br><br>
-            <p style="color: #666; line-height: 0.2rem;">爱我的发送到发送到发送到发斯蒂芬阿斯顿发送到发送到发斯蒂芬</p>
-           
+            <hr class="seperator reply__seperator" style="margin-right: 0">
 
-            <hr class="seperator">
+            <ul class="comments">
+              <li class="comments__item">
+                  <p class="comments__info"><span class="comments__username">面面</span></p>
+                  <p class="comments__content">周五要交图，明晚加班。</p>
+                  <p><span class="comments__time">2016-12-13 11:32</span><span class="comments__replay">回复</span></p>
+                  <hr class="seperator comments__seperator">
+              </li>
+              <li class="comments__item">
+                  <p class="comments__info"><span class="comments__username">阿木</span></p>
+                  <p class="comments__content">我也是啊，本来还想买疏通液的，这下好了，明天又不用洗澡了</p>
+                  <p><span class="comments__time">2016-12-13 11:35</span><span class="comments__replay">回复</span></p>
+                  <hr class="seperator comments__seperator">
+              </li>
+              <li class="comments__item">
+                  <p class="comments__info"><span class="comments__username">面面</span></p>
+                  <p class="comments__content">多好！</p>
+                  <p><span class="comments__time">2016-12-13 11:42</span><span class="comments__replay">回复</span></p>
+                  <hr class="seperator comments__seperator">
+              </li>
+            </ul>
         </div>
 
         <script type="text/javascript">
