--- a/public/stylesheets/single/single.css
+++ b/public/stylesheets/single/single.css
@@ -220,13 +220,17 @@ hr.reply__seperator {
 	margin-top: 0.2rem;
 }
 hr.comments__seperator {
-
 	margin-top: 0.2rem;
 }
 .comments__username {
 	font-size: 0.15rem;
 	line-height: 0.26rem;
 	color: #76B3B4;
+}
+.comments__item .reply__word {
+	font-size: 0.12rem;
+	line-height: 0.26rem;
+	color: #aaa;
 }
 .comments__content {
 	line-height: 0.24rem;
@@ -239,7 +243,7 @@ hr.comments__seperator {
 	font-size: 0.12rem;
 	color: #ccc;
 }
-.comments__replay {
+.comments__replay, .comments__delete {
 	float: right;
 	color: #aaa;
 	font-size: 0.14rem;
