可以评论了

--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -111,14 +111,7 @@
             
             <hr class="seperator reply__seperator" style="margin-right: 0">
 
-            <ul class="comments">
-              <li class="comments__item">
-                  <p class="comments__info"><span class="comments__username">面面</span></p>
-                  <p class="comments__content">周五要交图，明晚加班。</p>
-                  <p><span class="comments__time">2016-12-13 11:32</span><span class="comments__replay">回复</span></p>
-                  <hr class="seperator comments__seperator">
-              </li>
-            </ul>
+            <ul class="comments"></ul>
         </div>
 
         <script type="text/javascript">
