评论 还差 提醒

--- a/views/login/myInfo.ejs
+++ b/views/login/myInfo.ejs
@@ -7,7 +7,7 @@
         <div class="content">
             <p class="nickname"><span>Hi</span>&nbsp;<%= data.nickname %></p>
             <hr class="seperator">
-            <p class="my-option"><a href="javascript:void(0);" class="my-collect"><i class="iconfont option-icon">&#xe610;</i>收藏的家&nbsp;<span id="mycollect-count">(<%=data.collect.length%>)</span></a></p>            
+            <p class="my-option"><a href="javascript:void(0);" class="my-collect"><i class="iconfont option-icon">&#xe610;</i>收藏的家<span id="mycollect-count">(<%=data.collect.length%>)</span></a></p>            
             <hr class="seperator">
             <p class="my-option unavailable"><i class="iconfont option-icon">&#xe641;</i>收藏的物品(未上线)</p>
             <hr class="seperator">
