--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -120,7 +120,7 @@
         <script type="text/javascript" src="/javascripts/js/single/single.js"></script>
         <script type="text/template" id="commentsTemplate"> 
             {{ _.each(datas, function (item) { }}
-              <li class="comments__item">
+              <li class="comments__item"  data-id={{=item.from._id}} data-from={{=item.from.nickname}}>
                   <p class="comments__info">
                     <span class="comments__username">{{=item.from.nickname}}</span>
                     {{ if (item.to && item.to._id) { }}
@@ -134,7 +134,7 @@
                     {{ if (item.fromMe) { }}
                       <a href="javascript:void(0);" class="comments__delete" data-id={{=item._id}}>删除</a>
                     {{ }else { }}
-                      <a href="javascript:void(0);" class="comments__reply" data-id={{=item.from._id}} data-from={{=item.from.nickname}}>回复</a>
+                      <a href="javascript:void(0);" class="comments__reply">回复</a>
                     {{ } }}
                   </p> 
                   <hr class="seperator comments__seperator">
