--- a/views/index/index.ejs
+++ b/views/index/index.ejs
@@ -1,5 +1,5 @@
 <% include ../head.ejs %>
-	    <title>别人家</title>
+	    <title>别人家-室内设计全景展示</title>
       <meta name="baidu-site-verification" content="LOj7c8F8vl" />
 	    <link rel='stylesheet' href='/stylesheets/index/index.css' />
 	    <script type="text/javascript" src="/javascripts/js/index/index.js"></script>
