--- a/views/list/list.ejs
+++ b/views/list/list.ejs
@@ -1,5 +1,5 @@
 <% include ../head.ejs %>
-        <title>别人家</title>
+        <title>别人家-室内设计全景展示</title>
         <link rel='stylesheet' href='/stylesheets/list/list.css' />
 
     </head>
