评论系统结束

--- a/views/login/myCollect.ejs
+++ b/views/login/myCollect.ejs
@@ -6,7 +6,7 @@
     <body>  
 
         <div class="header">
-        	<a href="/list" style="text-decoration: none;">
+        	<a href="javascript:history.back(-1);" style="text-decoration: none;">
         		<i class="iconfont goBack">&#xe61d;</i>
         	</a><span class="my-text">我的</span><span class="collect-text">收藏</span>        	
         </div> 
