--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -13,9 +13,9 @@
             <div class="content-area">
                 <input type="hidden" name="referer" class="referer" value=<%=referer%>>
                 <div class="form-area signIn-area">
-                    <label><i class="iconfont input-icon username-icon">&#xe68b;</i></label><input type="text" name="username1" id="username1" placeholder="请输入邮箱" autocomplete="off">
+                    <label><i class="iconfont input-icon username-icon">&#xe68b;</i></label><input type="text" name="username1" id="username1" placeholder="请输入邮箱" autocomplete="on">
                     <label><br>
-                    <label><i class="iconfont input-icon password-icon">&#xe633;</i></label><input type="password" name="password1" id="password1" placeholder="密码" autocomplete="off">
+                    <label><i class="iconfont input-icon password-icon">&#xe633;</i></label><input type="password" name="password1" id="password1" placeholder="密码" autocomplete="on">
                     </label>
                 </div>
 
