--- a/views/head.ejs
+++ b/views/head.ejs
@@ -7,6 +7,7 @@
 	    <link rel='stylesheet' href='/stylesheets/reset.css' />
 	    <link rel='stylesheet' href='/stylesheets/base.css' />
 	    <script type="text/javascript" src="/javascripts/lib/zepto.min.js"></script>
+	    <script type="text/javascript" src="/javascripts/lib/zepto.cookie.min.js"></script>
 	    <script type="text/javascript" src="/javascripts/lib/touch.js"></script>
 	    <script type="text/javascript" src="/javascripts/lib/fx.js"></script>
 	    <script type="text/javascript" src="/javascripts/lib/underscore-min.js"></script>
