--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -13,9 +13,10 @@
                 <% if(!logStatus) {%>
                     <i class="iconfont login-img unlogged">&#xe632;</i>  
                 <% }else{%>
-                    <i class="iconfont login-img logged">&#xe605;</i>  
+                    <i class="iconfont login-img logged">&#xe605;<span class="unReadMsgCnt"><%=41%></span></i>  
                 <%}%>      
               <span class="split-img"></span>
+
         	</span>
         </div>
         <div class="cover-part">
