--- a/views/pano/pano.ejs
+++ b/views/pano/pano.ejs
@@ -78,9 +78,7 @@
             smoothSwitch : true,
             pts : {"1-1":[{position:[-36.711931,-24.502305,89.732219],path:"resource/5842fa95a5ebde0133fe9bcd/1-2/",name:"客厅",planPt:[40,70]}],
                 "1-2":[{position:[70.566856,-36.871385,-60.504709],path:"resource/5842fa95a5ebde0133fe9bcd/1-1/",name:"入口",planPt:[63,85]},{position:[26.053868,-65.562604,70.871299],path:"resource/5842fa95a5ebde0133fe9bcd/1-3/",name:"厕所",planPt:[63,50]}],
-                "1-3":[{position:[-88.254866,-59.156355,28.488669],path:"resource/5842fa95a5ebde0133fe9bcd/1-2/",name:"客厅",planPt:[40,70]},{position:[74.859215,-80.327905,6.597397],path:"resource/5842fa95a5ebde0133fe9bcd/1-4/",name:"卧室",planPt:[63,29]}],
-                "1-4":[{position:[-79.418569,-74.280967,-16.583994],path:"resource/5842fa95a5ebde0133fe9bcd/1-3/",name:"厕所",planPt:[63,29]},{position:[83.093469,-59.086059,41.283325],path:"resource/5842fa95a5ebde0133fe9bcd/1-5/",name:"窗台",planPt:[40,5]}],
-                "1-5":[{position:[-85.147062,-48.708827,-49.773769],path:"resource/5842fa95a5ebde0133fe9bcd/1-4/",name:"卧室",planPt:[63,60]}]}
+                "1-3":[{position:[34.341212,-52.466784,77.89684],path:"resource/5842fa95a5ebde0133fe9bcd/1-2/",name:"客厅",planPt:[40,70]}]}
         }
     };
     var qj = new PanoAJK.Init(settings);
