--- a/views/pano/pano.ejs
+++ b/views/pano/pano.ejs
@@ -2,8 +2,8 @@
     <title>别人家</title>
     <link rel='stylesheet' href='/stylesheets/pano/pano.css' />
     <script type="text/javascript" src="/javascripts/js/pano/pano.js"></script>
-    <script type="text/javascript" src="/javascripts/lib/Pano.js"></script>
-    <script type="text/javascript" src="/javascripts/lib/Compass.js"></script>
+    <script type="text/javascript" src="/javascripts/lib/pano/built/Pano.js"></script>
+    <!-- <script type="text/javascript" src="/javascripts/lib/Compass.js"></script> -->
 
     <!--顶点着色器-->
     <script type="x-shader/x-vertex" id="vshader">
@@ -78,7 +78,8 @@
             smoothSwitch : true,
             pts : {"1-1":[{position:[-36.711931,-24.502305,89.732219],path:"resource/5842fa95a5ebde0133fe9bcd/1-2/",name:"客厅",planPt:[40,70]}],
                 "1-2":[{position:[70.566856,-36.871385,-60.504709],path:"resource/5842fa95a5ebde0133fe9bcd/1-1/",name:"入口",planPt:[63,85]},{position:[26.053868,-65.562604,70.871299],path:"resource/5842fa95a5ebde0133fe9bcd/1-3/",name:"厕所",planPt:[63,50]}],
-                "1-3":[{position:[34.341212,-52.466784,77.89684],path:"resource/5842fa95a5ebde0133fe9bcd/1-2/",name:"客厅",planPt:[40,70]}]}
+                "1-3":[{position:[34.341212,-52.466784,77.89684],path:"resource/5842fa95a5ebde0133fe9bcd/1-2/",name:"客厅",planPt:[40,70]}]
+            }
         }
     };
     var qj = new PanoAJK.Init(settings);
