--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -19,101 +19,104 @@
 
         	</span>
         </div>
-        <div class="cover-part">
-          <img src="/resource/<%=data._id.toString()%>/cover.jpg">
-          <div class="info-tabs">
-              <span class="house-title"><%=data.title%></span>
-              <a href="/pano"><i class="iconfont play-icon">&#xe604;</i></a>
-              <ul class="info-tabs__tabs">
-                <li class="info-tabs__tab tab--active"><a href="javascript:void(0);" data-href="#host-info">主人信息</a></li>
-                <li class="info-tabs__tab"><a  href="javascript:void(0);" data-href="#house-info">房屋信息</a></li>
-                <li class="info-tabs__tab"><a href="javascript:void(0);" data-href="#comments">评论</a></li>
-              </ul>
-          </div>             
-        </div>
-        <div class="info__full">
+        <div class="content">
+            <div class="cover-part">
+            <img src="/resource/<%=data._id.toString()%>/cover.jpg">
+            <div class="info-tabs">
+                <span class="house-title"><%=data.title%></span>
+                <a href="/pano"><i class="iconfont play-icon">&#xe604;</i></a>
+                <ul class="info-tabs__tabs">
+                  <li class="info-tabs__tab tab--active"><a href="javascript:void(0);" data-href="#host-info">主人信息</a></li>
+                  <li class="info-tabs__tab"><a  href="javascript:void(0);" data-href="#house-info">房屋信息</a></li>
+                  <li class="info-tabs__tab"><a href="javascript:void(0);" data-href="#comments">评论</a></li>
+                </ul>
+            </div>             
+          </div>
+          <div class="info__full">
 
-          <p class="portrait-name"><img class="info__portrait" src="/resource/<%=data._id%>/portrait.jpg">
-              <span><%=data.title %></span>
-              <div class="like-collect"> 
-                <% if (logStatus) { %>
-                  <% if (data.isCollect) { %>
-                    <span class="collect-icon do-collect" data-id=<%=data._id%>></span>
-                  <% } else { %>
-                  <span class="collect-icon donot-collect" data-id=<%=data._id%>></span>
-                <% } %>
-                    
-                <% } else { %>
-                  <span class="collect-icon donot-collect" data-id=<%=data._id%>></span>
-                <% } %>
-                <span class="icon-count collect-count"><%= data.collects %></span>
-           
-                <% if (logStatus) { %>
-                  <% if (data.isLike) { %>
-                    <span class="like-icon do-like" data-id=<%=data._id%>></span>
-                  <% } else { %>
-                  <span class="like-icon donot-like" data-id=<%=data._id%>></span>
+            <p class="portrait-name"><img class="info__portrait" src="/resource/<%=data._id%>/portrait.jpg">
+                <span><%=data.title %></span>
+                <div class="like-collect"> 
+                  <% if (logStatus) { %>
+                    <% if (data.isCollect) { %>
+                      <span class="collect-icon do-collect" data-id=<%=data._id%>></span>
+                    <% } else { %>
+                    <span class="collect-icon donot-collect" data-id=<%=data._id%>></span>
                   <% } %>
-                    
-                <% } else { %>
-                  <span class="like-icon donot-like" data-id=<%=data._id%>></span>
-                <% } %>
-                <span class="icon-count like-count"><%= data.likes %></span>
+                      
+                  <% } else { %>
+                    <span class="collect-icon donot-collect" data-id=<%=data._id%>></span>
+                  <% } %>
+                  <span class="icon-count collect-count"><%= data.collects %></span>
+             
+                  <% if (logStatus) { %>
+                    <% if (data.isLike) { %>
+                      <span class="like-icon do-like" data-id=<%=data._id%>></span>
+                    <% } else { %>
+                    <span class="like-icon donot-like" data-id=<%=data._id%>></span>
+                    <% } %>
+                      
+                  <% } else { %>
+                    <span class="like-icon donot-like" data-id=<%=data._id%>></span>
+                  <% } %>
+                  <span class="icon-count like-count"><%= data.likes %></span>
 
+                </div>
+            </p>
+
+            <h2 class="info__title anchor-point" id="host-info">主人信息</h2>
+            <hr class="seperator">
+              <% data.hosts.forEach(function(item) { %>
+              <div>            
+                <div class="info__field--key">
+                  <p>姓名</p>
+                  <p>年龄</p>
+                  <p>职业</p>
+                </div>
+                <div class="info__field--value">
+                  <p><%=item.hostName%></p>
+                  <p><%=item.hostAge%></p>
+                  <p><%=item.hostJob%></p>
+                </div>
               </div>
-          </p>
-
-          <h2 class="info__title anchor-point" id="host-info">主人信息</h2>
-          <hr class="seperator">
-            <% data.hosts.forEach(function(item) { %>
-            <div>            
+              <%  })%>       
+              <h2 class="info__title anchor-point" id="house-info">房屋信息</h2>
+              <hr class="seperator">
               <div class="info__field--key">
-                <p>姓名</p>
-                <p>年龄</p>
-                <p>职业</p>
+                <p>房屋位置</p>
+                <p>户型</p>
+                <p>面积</p>
+                <p>装修时间</p>
+                <p>装修费用</p>
+                <p>装修耗时</p>
+                <p>感悟</p>
               </div>
               <div class="info__field--value">
-                <p><%=item.hostName%></p>
-                <p><%=item.hostAge%></p>
-                <p><%=item.hostJob%></p>
+                <p><%=data.province%>&nbsp;<%=data.county%></p>
+                <p><%=data.type%></p>
+                <p><%=data.area%>㎡</p>
+                <p><%=data.dec_time%></p>
+                <p><%=data.dec_cost%>万</p>
+                <p><%=data.dec_period%>个月</p>
+                <p><%=data.dec_experience%></p>
               </div>
-            </div>
-            <%  })%>       
-            <h2 class="info__title anchor-point" id="house-info">房屋信息</h2>
-            <hr class="seperator">
-            <div class="info__field--key">
-              <p>房屋位置</p>
-              <p>户型</p>
-              <p>面积</p>
-              <p>装修时间</p>
-              <p>装修费用</p>
-              <p>装修耗时</p>
-              <p>感悟</p>
-            </div>
-            <div class="info__field--value">
-              <p><%=data.province%>&nbsp;<%=data.county%></p>
-              <p><%=data.type%></p>
-              <p><%=data.area%>㎡</p>
-              <p><%=data.dec_time%></p>
-              <p><%=data.dec_cost%>万</p>
-              <p><%=data.dec_period%>个月</p>
-              <p><%=data.dec_experience%></p>
-            </div>
+                
+              <h2 class="info__title anchor-point" id="comments">评论</h2>
+              <hr class="seperator">
+              <div class="comment-input-area">
+                <textarea name="comment-input" id="comment-input" placeholder="你的看法..."></textarea>
+                <!-- <input type="text" name="comment-input" id="comment-input" placeholder="你的看法..."> -->
+              </div>
+              <div class="clearfix">
+                <button type="button" class="reply-btn">发送</button>
+              </div>
               
-            <h2 class="info__title anchor-point" id="comments">评论</h2>
-            <hr class="seperator">
-            <div class="comment-input-area">
-              <textarea name="comment-input" id="comment-input" placeholder="你的看法..."></textarea>
-              <!-- <input type="text" name="comment-input" id="comment-input" placeholder="你的看法..."> -->
-            </div>
-            <div class="clearfix">
-              <button type="button" class="reply-btn">发送</button>
-            </div>
-            
-            <hr class="seperator reply__seperator" style="margin-right: 0">
+              <hr class="seperator reply__seperator" style="margin-right: 0">
 
-            <ul class="comments"></ul>
+              <ul class="comments"></ul>
+          </div>
         </div>
+
 
         <script type="text/javascript">
           var logStatus = <%=logStatus%>;
