--- a/public/stylesheets/single/single.css
+++ b/public/stylesheets/single/single.css
@@ -73,7 +73,7 @@ body {
 	color: #fff;
 }
 .content {
-	position: fixed;
+	position: absolute;
 	top: 0.5rem;
 	bottom: 0;
 	overflow: scroll;
@@ -136,10 +136,6 @@ body {
 	font-size: 0.16rem;
 	color: #999;
 }
-.anchor {
-	margin-top: -0.5rem;
-	padding-top: 0.5rem;
-}
 .info__portrait {
 	height: 0.42rem;
 	width: 0.42rem;
@@ -176,10 +172,6 @@ body {
 	padding-bottom: 0.05rem;
 	margin-bottom: 0.02rem;
 }
-.anchor-point {
-	padding-top: 0.5rem;
-	margin-top: -0.5rem;
-}
 .like-collect {
 	float: right;
 	height: 0.22rem;
@@ -203,13 +195,18 @@ body {
 	width: 0.2rem;
 	height: 0.2rem;
 }
-.comment-input-area {
+.comment-input-area, .reply-input-area {
+	width: 100%;
+	height: 0.76rem;
+	background: #fafafa;
+	text-align: center;
+} {
 	width: 100%;
 	height: 0.76rem;
 	background: #fafafa;
 	text-align: center;
 }
-#comment-input {
+#comment-input, .reply-input {
 	border: none;
 	margin: 0.05rem;
 	width: 94%;
@@ -223,7 +220,7 @@ body {
 ::-webkit-input-placeholder { /* WebKit browsers */ 
 color: #ccc; 
 } 
-.reply-btn {
+.reply-btn, .send-btn {
 	float: right;
 	margin-top: 0.08rem;
 	text-decoration: none;
