--- a/public/stylesheets/single/single.css
+++ b/public/stylesheets/single/single.css
@@ -15,6 +15,8 @@ body {
 	z-index: 100;
 	left: 0;
 	top: 0;
+	right: 0;
+	display: block;
 }
 .header .others {
 	margin-left: 0.2rem;
@@ -241,6 +243,9 @@ hr.reply__seperator {
 }
 hr.comments__seperator {
 	margin-top: 0.2rem;
+}
+.comments {
+	padding-bottom: 1rem;
 }
 .comments__username {
 	font-size: 0.15rem;
