--- a/views/single/single.ejs
+++ b/views/single/single.ejs
@@ -154,7 +154,7 @@
             {{ }); }}
         </script>
          <script type="text/template" id="replyTemplate">
-            <div id="reply-area">
+            <div class="reply-area">
               <div class="reply-input-area">
                 <textarea placeholder="你的看法..." class="reply-input"></textarea>
               </div>
